fix mobile image spacing

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -10,3 +10,11 @@ $dark: rgba(255, 255, 255, 0);
 #content {
     min-height: 60vh;
   }
+
+
+
+@include tablet {
+    .tile-image > img {
+        padding-right: 1em;
+    }
+}
